<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_to_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:drawableTop="@android:drawable/ic_dialog_map"
            android:drawablePadding="16dp"
            android:paddingTop="100dp"
            android:gravity="center"
            android:text="@string/str_search_cafe_map"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/btn_to_near_map"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search_cafe" />

        <Button
            android:id="@+id/btn_to_near_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/str_near_search_cafe"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_to_map"
            app:layout_constraintTop_toBottomOf="@id/et_search_cafe" />

        <Button
            android:id="@+id/btn_to_"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/str_buy_voucher"
            android:textSize="8sp"
            app:layout_constraintEnd_toStartOf="@id/btn_to"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toEndOf="@+id/btn_to_map"
            app:layout_constraintTop_toBottomOf="@id/btn_to_near_map"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.15" />

        <Button
            android:id="@+id/btn_to"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/str_registration_voucher"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintTop_toBottomOf="@id/btn_to_near_map"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.15" />

        <EditText
            android:id="@+id/et_search_cafe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_local_airport_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/str_info_search_cafe"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_franchisee_cafes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/str_franchisee_cafes"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_to_map"
            app:layout_constraintWidth_percent="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cafes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_franchisee_cafes"
            app:layout_constraintWidth_percent="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>